# gcxx

./: .gitignore  README.md  justfile  meson.build  scan.cpp
example/: avl.cpp  avl.hpp  test.cpp
presentation/: Makefile  main.tex
src/: alloc.cpp  alloc.hpp  gc.cpp  gc.hpp  gc_new.hpp  main.cpp  mallocator.hpp
